  this means if the current node has no children the node with the best bound is selected (SCIPgetBestboundNode()) 
- separators are not called any longer for an integral initial LP solution
- in root node, first LP solution is checked for feasibility to avoid expensive setup
- added a dual reduction step in cons_knapsack.c
- avoided restarting if LP solution is feasible

fixed bugs:
- fixed bug in lpi_clp.cpp: SCIPlpiChgBounds checks if the column status exists in Clp before using it
- fixed bug concerning assert(!SCIPlpDivingObjChanged(lp)) which was caused by wrong infinity double parameters for cplex
- fixed bug in reader_zpl.c which appeared using the parameter "reading/zplreader/parameters" 
- fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero
- fixed bug in cons_setppc: aggregated variables were not correctly removed in presolving
- fixed bug in cons_linear.c: binary variables should not be multi-aggregated
- fixed bug in tree.c: propagate implications on multi-aggregated should not be performed 
- fixed bugs in flatzinc readers with constraints that exclusively consist of constants
- fixed bug in reader_gms: correct handling of nonstandard bounds on general integer variables
- fixed bug in conflict.c in the method conflictsetAddBound() 
- fixed "bug" in projects Makefiles w.r.t. "make clean"
- fixed bugs in solve.c: even with LP solving disabled, the root LP was solved in case continous variables are 
  contained; setting pricing/maxvars(root) to 1 resulted in not calling the pricers
- fixed bugs do to HEUR_TIMING SCIP_HEURTIMING_AFTERPROPLOOP which appeared during repropagation
- fixed bug in solve.c: make sure SCIP terminates correctly also when a user interrupt or gap limit is reached, i.e., avoid error "pricing was aborted, but no branching could be created!"
- fixed bug in sepa_rapidlearning.c, stop processing if there are no binary variables left